fixed unaligned 'source code' footer

--- a/style.css
+++ b/style.css
@@ -56,6 +56,5 @@ li {
 	margin: auto;
 	width: 80%;
 	max-width: 900px;
-	text-align: left;
 	font-size: 12px;
 }
